--- a/novo_projeto/heroes/src/app/paginas/lista/lista.component.html
+++ b/novo_projeto/heroes/src/app/paginas/lista/lista.component.html
@@ -1,8 +1,16 @@
 <section>
-    <input type="button" value="Listar">
+    <input type="button" value="Listar" (click)="getHeroes()">
 </section>
 <section>
     <div class="lista-container">
-
+        <figure>
+            <img src="" alt="">
+        </figure>
+        <article>
+            <h1>Nome</h1>
+        </article>
+        <article>
+            <p>Profissão</p>
+        </article>
     </div>
 </section>
